--- a/testjs.html
+++ b/testjs.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>JS TEST</title>
+    <script lang="javascript">
+        console.log('Hello world!!!!!!!!');
+    </script>
 </head>
 <body>
     
